# OpenGL-Catmull-Rom-Spline

./: .gitignore  CMakeLists.txt  README.md
src/: common.h  control_widget.cpp  control_widget.h  main.cpp  point.h  scene.cpp  scene.h  spline.cpp  spline.h
